# loopgotowhile

./: LICENSE  Main.hs  README.mkd  TODO  loopgotowhile.cabal  runtests.sh  test
src/: Test.hs
src/Language/LoopGotoWhile/: Util.hs
src/Language/LoopGotoWhile/Abstract/: Strict.hs
src/Language/LoopGotoWhile/Base/: Base.hs
src/Language/LoopGotoWhile/Common/: ExtendedAS.hs  Transform.hs
src/Language/LoopGotoWhile/Goto/: Extended.hs  ExtendedAS.hs  Strict.hs  StrictAS.hs  Transform.hs
src/Language/LoopGotoWhile/Loop/: CLTool.hs  Extended.hs  ExtendedADT.hs  ExtendedAS.hs  Strict.hs  StrictAS.hs  Transform.hs
src/Language/LoopGotoWhile/Shared/: Evaluation.hs  Extended.hs  ExtendedAS.hs  Transform.hs  Util.hs
src/Language/LoopGotoWhile/While/: Extended.hs  ExtendedAS.hs  Optimize.hs  Strict.hs  StrictAS.hs  Transform.hs
tests/: TestSuite.hs
tests/Language/LoopGotoWhile/Abstract/: Tests.hs
tests/Language/LoopGotoWhile/Base/: Tests.hs
tests/Language/LoopGotoWhile/Goto/Extended/: Tests.hs
tests/Language/LoopGotoWhile/Goto/Strict/: Tests.hs
tests/Language/LoopGotoWhile/Goto/Transform/: Tests.hs
tests/Language/LoopGotoWhile/Loop/Extended/: Tests.hs
tests/Language/LoopGotoWhile/Loop/Strict/: Tests.hs
tests/Language/LoopGotoWhile/Loop/Transform/: Tests.hs
tests/Language/LoopGotoWhile/While/Extended/: Tests.hs
tests/Language/LoopGotoWhile/While/Strict/: Tests.hs
tests/Language/LoopGotoWhile/While/Transform/: Tests.hs
