Name:        loopgotowhile
Version:     0.1
Synopsis:    Interpreters for three simple programming languages created for 
             self-educational purposes
Description: TODO

Homepage:     https://github.com/eugenkiss/loopgotowhile
License:      BSD3
License-file: LICENSE
Author:       Eugen Kiss (eugen@eugenkiss.com)
Maintainer:   Eugen Kiss (eugen@eugenkiss.com)
Stability:    Experimental
Category:     Language

Cabal-version:      >=1.2
Build-type:         Simple
Extra-source-files: README.mkd

Source-Repository head
    Type:     git
    Location: https://github.com/eugenkiss/loopgotowhile
    Branch:   master

Flag test
    Description: Build the tests
    Default:     False

Library
    Ghc-Options:    -Wall
    Hs-Source-Dirs: src
    Build-Depends:   
        base >= 4.0,
        haskell98,
        mtl,
        array,
        parsec
    Exposed-Modules:
        Language.LoopGotoWhile.Loop.Strict
        Language.LoopGotoWhile.Loop.StrictAS
        Language.LoopGotoWhile.Loop.Extended
        Language.LoopGotoWhile.Loop.ExtendedAS
        Language.LoopGotoWhile.Loop.Transform
        Language.LoopGotoWhile.Goto.Strict
        Language.LoopGotoWhile.Goto.StrictAS
        Language.LoopGotoWhile.Goto.Extended
        Language.LoopGotoWhile.Goto.ExtendedAS
        Language.LoopGotoWhile.Goto.Transform
        Language.LoopGotoWhile.While.Strict
        Language.LoopGotoWhile.While.StrictAS
        Language.LoopGotoWhile.While.Extended
        Language.LoopGotoWhile.While.ExtendedAS
        Language.LoopGotoWhile.While.Transform
    Other-Modules:
        Language.LoopGotoWhile.Shared.Util
        Language.LoopGotoWhile.Shared.Extended
        Language.LoopGotoWhile.Shared.ExtendedAS
        Language.LoopGotoWhile.Shared.Transform

Executable test
    Ghc-Options:    -Wall
    Hs-Source-Dirs: src, tests
    Main-Is:        TestSuite.hs
    if !flag(test)
        Buildable:  False
    Build-Depends:   
        base >= 4.0,
        haskell98,
        mtl,
        array,
        parsec,
        test-framework,
        test-framework-hunit, 
        HUnit
    
--TODO: Executable loop
  
--TODO: Executable goto

--TODO: Executable while
